--- a/slides/index-es.html
+++ b/slides/index-es.html
@@ -188,7 +188,7 @@
                              ✓ <a href="https://github.com/cortezcristian/node-wings">Node Wings (Julio 2013)</a> <br />
                             ✓ <a href="http://cortezcristian.com/ruby-wings/">Ruby Wings (Marzo 2012)</a> <br />
                         </p>
-                        
+                    </section>    
 				</section>
                 
                 <section>
