Sync actions with video

--- a/public/slides/index.html
+++ b/public/slides/index.html
@@ -43,7 +43,7 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
 				<section>
-					<h1>Code-Trainer</h1>
+					<h1>Coding-Trainer</h1>
 					<h3>Rápido, Flexible y Divertido</h3>
 					<p>
 						<small>creado por <a href="http://cortezcristian.com">Cristian Cortez</a> / <a href="http://twitter.com/cortezcristian">@cortezcristian</a></small>
@@ -140,7 +140,7 @@
 <!-- Example of nested vertical slides -->
 				<section>
 					<section>
-						<h2>¿Qué cosas nos diferencian?</h2>
+						<h2>¿Qué cosas lo diferencian?</h2>
 						
 						<p>
 							<img height="238" src="img/questionmark.png" alt="?" style="border:0;background:transparent;box-shadow:none;">
@@ -153,7 +153,7 @@
 					</section>
 					<section>
 						<h2>
-                            ¿Por qué deberian elegir Code-Trainer?
+                            ¿Por qué deberian elegir Coding-Trainer?
                         </h2>    
                         <p style="text-align:left;">
                             ✓ Aprende a tu ritmo y en tu tiempo libre<br />
